# GroupMixer

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  SEO_TODO.md  SEO_TODO_REVISED.md  VISION.md  autoresearch.checks.sh  autoresearch.config.json  autoresearch.ideas-to-try.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.metrics.jsonl  autoresearch.sh  autoresearch.solver5.last_run_metrics.json  autoresearch.solver5.last_run_report.html  clippy.toml  construction_heuristics_research.md  gate.sh  rustfmt.toml  vercel.json
backend/api/: Cargo.toml
backend/api/src/: main.rs
backend/api/tests/: api_tests.rs  cross_surface_parity.rs
backend/benchmarking/: Cargo.toml  path-matrix.yaml
backend/benchmarking/schemas/: case-run.schema.json  comparison-report.schema.json  run-report.schema.json
backend/benchmarking/src/: artifacts.rs  benchmark_mode.rs  compare.rs  hotpath.rs  hotpath_inputs.rs  index.rs  lib.rs  manifest.rs  recordings.rs  refs.rs  runner.rs  storage.rs  summary.rs  trajectory.rs  validation.rs
backend/benchmarking/suites/: adversarial.yaml  correctness-edge-intertwined-solver3-v1.yaml  correctness-edge-intertwined-v1.yaml  hotpath-clique-swap-apply-sailing-trip-demo-solver3.yaml  hotpath-clique-swap-apply-solver3.yaml  hotpath-clique-swap-preview-sailing-trip-demo-solver3.yaml  hotpath-clique-swap-preview-solver2.yaml  hotpath-clique-swap-preview-solver3.yaml  hotpath-search-iteration-sailing-trip-demo-solver3.yaml  hotpath-search-iteration.yaml  hotpath-swap-apply-sailing-trip-demo-solver3.yaml  hotpath-swap-apply-solver3.yaml  hotpath-swap-preview-sailing-trip-demo-solver3.yaml  hotpath-swap-preview-solver2.yaml  hotpath-swap-preview-solver3.yaml  hotpath-swap-preview.yaml  hotpath-transfer-apply-sailing-trip-demo-solver3.yaml  hotpath-transfer-apply-solver3.yaml  hotpath-transfer-apply.yaml  hotpath-transfer-preview-sailing-trip-demo-solver3.yaml  hotpath-transfer-preview-solver2.yaml  hotpath-transfer-preview-solver3.yaml  hotpath-transfer-preview.yaml  objective-canonical-adversarial-solver3-broad-multiseed-v1.yaml  objective-canonical-adversarial-solver3-metaheuristic-v1.yaml  objective-canonical-adversarial-solver3-v1.yaml  objective-canonical-adversarial-v1.yaml  objective-canonical-representative-solver3-broad-multiseed-v1.yaml  objective-canonical-representative-solver3-metaheuristic-v1.yaml  objective-canonical-representative-v1.yaml  objective-canonical-stretch-feature-rich-solver3-metaheuristic-v1.yaml  objective-canonical-stretch-solver3-broad-multiseed-v1.yaml  objective-canonical-stretch-solver3-metaheuristic-v1.yaml  objective-canonical-stretch-solver3-phase1-repeat-guided.yaml  objective-canonical-stretch-solver3-v1.yaml  objective-canonical-stretch-v1.yaml  objective-canonical-stretch-zero-repeat-solver3-metaheuristic-v1.yaml  objective-diagnostic-fixed-iteration-adversarial-solver3-metaheuristic-v1.yaml  objective-diagnostic-fixed-iteration-adversarial-solver3-v1.yaml  objective-diagnostic-fixed-iteration-adversarial-v1.yaml  (+92 more)
backend/cli/: Cargo.toml
backend/cli/src/: cli_help.rs  contract_surface.rs  lib.rs  main.rs  public_errors.rs
backend/contracts/: Cargo.toml
backend/contracts/src/: bootstrap.rs  errors.rs  examples.rs  invariants.rs  lib.rs  operations.rs  reference_docs.rs  schemas.rs  types.rs
backend/core/: Cargo.toml  README.md  build.rs
backend/core/benches/: bench_inputs.rs  solver_perf.rs
backend/core/examples/: integration_test.rs  late_arrivals_demo.rs  session_specific_demo.rs  solver3_construction_methods_benchmark.rs  solver3_oracle_guided_construction_benchmark.rs  solver3_oracle_projection_probe.rs  solver5_construction_coverage.rs  solver6_optimality_frontier.rs  solver6_seed_catalog.rs
backend/core/src/: lib.rs  models.rs  runtime_target.rs  solver.rs
backend/core/tests/: README.md  construction_regression.rs  construction_seed_ingestion_regression.rs  core_regression_tests.rs  data_driven_tests.rs  move_clique_swap_regression.rs  move_swap_regression.rs  move_transfer_regression.rs  property_tests.rs  recommended_settings.rs  schedule_validation_regression.rs  search_driver_regression.rs  test_settings.yaml  warm_start_ingestion_regression.rs
backend/wasm/: Cargo.toml
backend/wasm/src/: contract_projection.rs  contract_runtime.rs  contract_surface.rs  lib.rs  public_errors.rs
solver-benchmarking/: Cargo.toml
solver-benchmarking/src/: artifacts.rs  compare.rs  hotpath.rs  hotpath_inputs.rs  index.rs  lib.rs  machine.rs  manifest.rs  recording_types.rs  recordings.rs  refs.rs  runner.rs  storage.rs  summary.rs
solver-cli/: Cargo.toml
solver-cli/src/: cli_help.rs  contract_surface.rs  lib.rs  main.rs
solver-cli/test_cases/: simple_test.json
solver-contracts/: Cargo.toml
solver-contracts/src/: bootstrap.rs  errors.rs  examples.rs  lib.rs  operations.rs  reference_docs.rs  schemas.rs  types.rs
solver-core/: Cargo.toml  README.md  build.rs
solver-core/benches/: solver_perf.rs
solver-core/examples/: integration_test.rs  late_arrivals_demo.rs  session_specific_demo.rs
solver-core/src/: lib.rs  models.rs  solver.rs
solver-core/src/algorithms/: simulated_annealing.rs
solver-core/src/solver/: construction.rs  display.rs  dsu.rs  mod.rs  tests.rs  validation.rs
solver-core/tests/: README.md  core_regression_tests.rs  data_driven_tests.rs  move_transfer_regression.rs  property_tests.rs  recommended_settings.rs  test_settings.yaml
solver-core/tests/common/: mod.rs
solver-core/tests/test_cases/: attribute_balance_exact_edge.json  benchmark_constrained.json  benchmark_unconstrained.json  benchmark_very_large.json  clique_swap_functionality_test.json  conflict_should_vs_should_not.json  constraint_immovable_person.json  constraint_should_stay_together.json  invalid_duplicate_person_ids.json  late_arrivals_early_departures_test.json  minimal_valid_problem.json  pair_meeting_impossible_due_to_participation.json  transfer_test.json  (+9 more)
solver-server/: Cargo.toml
solver-server/src/: lib.rs  main.rs
solver-server/tests/: api_tests.rs
(+1330 files in other folders)
