[package]
name = "solver-benchmarking"
version = "0.1.0"
edition = "2021"

[lib]
name = "solver_benchmarking"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
solver-core = { path = "../solver-core" }

[dev-dependencies]
tempfile = "3.14"
