[package]
name = "solver-cli"
version = "0.1.0"
edition = "2021"
description = "CLI interface for the GroupMixer solver - AI-testable optimization"

[[bin]]
name = "solver-cli"
path = "src/main.rs"

[dependencies]
solver-core = { path = "../solver-core" }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
