[package]
name = "solver-cli"
version = "0.1.0"
edition = "2021"
description = "CLI interface for the GroupMixer solver - AI-testable optimization"

[[bin]]
name = "solver-cli"
path = "src/main.rs"

[dependencies]
solver-core = { path = "../solver-core" }
solver-benchmarking = { path = "../solver-benchmarking" }
clap = { version = "4.6", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.14"
