[package]
name = "solver-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solver-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
indicatif = "0.18.3"
rand = "0.9.2"
dashmap = "6.1.0"

solver-core = { path = "../solver-core" }
 