[package]
name = "gm-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gm-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2"

gm-core = { path = "../core" }
gm-contracts = { path = "../contracts" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
gm-cli = { path = "../cli" }
gm-wasm = { path = "../wasm" }
 
