[package]
name = "gm-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gm-api"
path = "src/main.rs"

[features]
default = []
solver3-experimental-repeat-guidance = [
    "gm-core/solver3-experimental-repeat-guidance",
    "gm-contracts/solver3-experimental-repeat-guidance",
]
solver3-experimental-memetic = [
    "gm-core/solver3-experimental-memetic",
    "gm-contracts/solver3-experimental-memetic",
]
solver3-experimental-conflict-restricted-sampling = [
    "gm-core/solver3-experimental-conflict-restricted-sampling",
    "gm-contracts/solver3-experimental-conflict-restricted-sampling",
]
solver3-experimental-recombination = [
    "gm-core/solver3-experimental-recombination",
    "gm-contracts/solver3-experimental-recombination",
]
solver3-research-all = [
    "gm-core/solver3-research-all",
    "gm-contracts/solver3-research-all",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2"

gm-core = { path = "../core" }
gm-contracts = { path = "../contracts" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
gm-cli = { path = "../cli" }
gm-wasm = { path = "../wasm" }
 
