[package]
name = "gm-cli"
version = "0.1.0"
edition = "2021"
description = "CLI interface for the GroupMixer solver - AI-testable optimization"

[[bin]]
name = "gm-cli"
path = "src/main.rs"

[dependencies]
gm-core = { path = "../core" }
gm-contracts = { path = "../contracts" }
gm-benchmarking = { path = "../benchmarking" }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.27"
