[package]
name = "solver-contracts"
version = "0.1.0"
edition = "2021"

[lib]
name = "solver_contracts"
path = "src/lib.rs"

[dependencies]
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solver-core = { path = "../core" }

[dev-dependencies]
jsonschema = "0.45"
tempfile = "3.27"
