[package]
name = "gm-contracts"
version = "0.1.0"
edition = "2021"

[lib]
name = "gm_contracts"
path = "src/lib.rs"

[features]
default = []
solver3-experimental-repeat-guidance = ["gm-core/solver3-experimental-repeat-guidance"]
solver3-experimental-memetic = ["gm-core/solver3-experimental-memetic"]
solver3-experimental-conflict-restricted-sampling = ["gm-core/solver3-experimental-conflict-restricted-sampling"]
solver3-experimental-recombination = ["gm-core/solver3-experimental-recombination"]
solver3-research-all = ["gm-core/solver3-research-all"]

[dependencies]
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gm-core = { path = "../core" }

[dev-dependencies]
jsonschema = "0.45"
tempfile = "3.27"
