[package]
name = "gm-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "gm_core"
path = "src/lib.rs"

[features]
default = []
cache-drift-assertions = []
debug-attr-balance-tracing = []
debug-invariant-checks = []
# Enables solver3 correctness-lane hooks (sampled oracle + invariant checks during search).
# Keep this disabled for performance benchmark lanes.
solver3-oracle-checks = []
# Enables solver3 repeat-guided hotspot proposal research.
solver3-experimental-repeat-guidance = []
# Enables solver3 steady-state memetic outer-driver research.
solver3-experimental-memetic = []
# Enables solver3 archive/recombination research drivers (donor/path/multi-root).
solver3-experimental-recombination = []
# Convenience umbrella for all solver3 research-only search features.
solver3-research-all = [
    "solver3-experimental-repeat-guidance",
    "solver3-experimental-memetic",
    "solver3-experimental-recombination",
]

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
schemars = "1.2"
rand = { version = "0.10.1", features = ["std_rng"] }
rand_chacha = "0.10.0"
uuid = { version = "1.23.0", features = ["v4", "serde", "js"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
log = "0.4"
serde_json = "1.0.149"
thiserror = "2.0.18"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.10"

[build-dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.149"

[[bench]]
name = "solver_perf"
harness = false
