[package]
name = "gm-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gm-core = { path = "../core" }
gm-contracts = { path = "../contracts" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
schemars = "1.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
getrandom = { version = "0.4", features = ["wasm_js"] }

[features]
default = ["console_error_panic_hook"]
solver3-experimental-repeat-guidance = [
    "gm-core/solver3-experimental-repeat-guidance",
    "gm-contracts/solver3-experimental-repeat-guidance",
]
solver3-experimental-memetic = [
    "gm-core/solver3-experimental-memetic",
    "gm-contracts/solver3-experimental-memetic",
]
solver3-experimental-conflict-restricted-sampling = [
    "gm-core/solver3-experimental-conflict-restricted-sampling",
    "gm-contracts/solver3-experimental-conflict-restricted-sampling",
]
solver3-experimental-recombination = [
    "gm-core/solver3-experimental-recombination",
    "gm-contracts/solver3-experimental-recombination",
]
solver3-research-all = [
    "gm-core/solver3-research-all",
    "gm-contracts/solver3-research-all",
]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
